# fitbit-analytics

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
backend/: Dockerfile
backend/app/: crud.py  main.py  models.py
db/: init.sql
frontend/: Dockerfile  dashboard.py
ingestion/: Dockerfile  cronjob  ingest.py  last-run.json
modules/: db_connection.py  logging_config.py
resources/: fitbit_charge_6.ipynb
