[project]
name = "fitbit-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "logger>=1.4",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "psycopg2>=2.9.10",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "wearipedia>=0.1.7",
]
